filter_jwplayer:  Fix alignment for flash player

--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,4 @@
  * Filter JWPlayer
  */
 .filter_jwplayer_media {display:block;margin-top:5px;margin-bottom:5px;text-align: center;}
-.filter_jwplayer_media .jwplayer{display:inline-block;}
+.filter_jwplayer_playerblock{display:inline-block;}
